--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<p class="header-subtitle">Верстка на HTML/CSS <br>
 					Разработка сайтов под ключ</p>
 					<div class="header-button-block">
-						<button class="header-button">Связаться</button>
+						<a href="https://vk.me/id111189318" class="header-button" target="_blank" >Связаться</a>
 						<small>*Это бесплатно</small>
 					</div>
 				</div>
@@ -81,8 +81,8 @@
 					<div class="social-block">
 						<p>Как со мной связаться</p>
 						<a href="#"><img src="img/facebook-logo-button.png" alt="facebook"></a>
-						<a href="#"><img src="img/telegram-symbol.png" alt="telegram"></a>
-						<a href="#"><img src="img/vk-social-logotype.png" alt="VK"></a>
+						<a href="https://t.me/alex1secret"><img src="img/telegram-symbol.png" alt="telegram"></a>
+						<a href="https://vk.com/id111189318"><img src="img/vk-social-logotype.png" alt="VK"></a>
 						<a href="#"><img src="img/youtube-symbol.png" alt="youtube"></a>
 					</div>
 					<!-- /.social-block -->
@@ -90,7 +90,7 @@
 				<div class="col-md-4">
 					<div class="footer-cta-block">
 						<p class="footer-cta"></p>
-						<button class="footer-button">Написать</button>
+						<a href="https://vk.me/id111189318" target="_blank" class="footer-button">Написать</a>
 					</div>
 				</div>
 			</div>
